metadata/force-app/main/default/objects/CustomName_hRgDx__c/CustomName_hRgDx__c.object-meta.xml
<CustomObject>
    <description>Description_PUYMu</description>
    <label>CustomLabel_DVrXk</label>
    <nameField>
        <label>CustomLabel_DVrXk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_DVrXks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>