metadata/force-app/main/default/objects/CustomName_hRgDx__c/fields/CustomField_QGQxQ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_QGQxQ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiNlhf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>